tests/checker/ok/method_chain_through_alias.ow
Greeting = String

main = () -> Unit {
    Greeting("hello")
        .concat(" world")
        .print()
}
