tests/checker/fail/type_definition_ordering_violation.ow
Zebra = String

Apple = String

main = () -> Unit {
    "ok".print()
}
